fixed overflow

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -18,7 +18,7 @@ body {
     background: url(cake.jpg) no-repeat center center fixed ;
     background-size: cover;
     height: 100%;
-    overflow: hidden;
+    /*overflow: hidden;*/
     color: whitesmoke;
     font-family: 'Lato', sans-serif;
 
